--- a/BazeProjekat/.classpath
+++ b/BazeProjekat/.classpath
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="libs"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-10">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="F:/Users/Andrija/Downloads/jtds-1.3.1-dist/jtds-1.3.1.jar"/>
+	<classpathentry kind="lib" path="libs/jtds-1.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
